--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 Flask==0.10.1
-numpy==1.10.4
-pandas==0.17.1
-scikit-learn==0.17
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
+numpy==1.16.1
+pandas==0.24.1
+python-dateutil==2.8.0
+pytz==2018.9
+scikit-learn==0.20.2
+scipy==1.2.1
+six==1.12.0
+Werkzeug==0.14.1
